<resources>
    <string name="app_name">PeriodicPocket</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="element_name">[ELEMENT NAME]</string>
    <string name="element_symbol">[ELEMENT SYMBOL]</string>
    <string name="atomic_number">[ATOMIC NUMBER]</string>
    <string name="atomic_weight">[ATOMIC WEIGHT]</string>
    <string name="period">[PERIOD]</string>
    <string name="group">[GROUP]</string>
    <string name="family">[FAMILY]</string>
    <string name="state">[STATE]</string>
    <string name="radioactivity">[RADIOACTIVITY]</string>

    <string name="radioactivity_true">Yes</string>
    <string name="radioactivity_false">No</string>

    <string name="state_solid">Solid</string>
    <string name="state_liquid">Liquid</string>
    <string name="state_gas">Gas</string>
    <string name="state_unknown">Unknown</string>

    <string name="family_alkali">Alkali Metal</string>
    <string name="family_alkaline">Alkaline Earth Metal</string>
    <string name="family_lanthanide">Lanthanide</string>
    <string name="family_actinide">Actinide</string>
    <string name="family_transition">Transition Metal</string>
    <string name="family_post">Post-Transition Metal</string>
    <string name="family_metalloid">Metalloid</string>
    <string name="family_polyatomic">Polyatomic Nonmetal</string>
    <string name="family_diatomic">Diatomic Nonmetal</string>
    <string name="family_noble">Noble Gas</string>
    <string name="family_unknown">Unknown</string>

    <string name="Section">Section</string>

    <string name="hydrogen">Hydrogen</string>
    <string name="helium">Helium</string>
    <string name="lithium">Lithium</string>
    <string name="beryllium">Beryllium</string>
    <string name="boron">Boron</string>
    <string name="carbon">Carbon</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="oxygen">Oxygen</string>
    <string name="fluorine">Fluorine</string>
    <string name="neon">Neon</string>
    <string name="sodium">Sodium</string>
    <string name="magnesium">Magnesium</string>
    <string name="aluminum">Aluminum</string>
    <string name="silicon">Silicon</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="sulfur">Sulfur</string>
    <string name="chlorine">Chlorine</string>
    <string name="argon">Argon</string>
    <string name="potassium">Potassium</string>
    <string name="calcium">Calcium</string>
    <string name="scandium">Scandium</string>
    <string name="titanium">Titanium</string>
    <string name="vanadium">Vanadium</string>
    <string name="chromium">Chromium</string>
    <string name="manganese">Manganese</string>
    <string name="iron">Iron</string>
    <string name="cobalt">Cobalt</string>
    <string name="nickel">Nickel</string>
    <string name="copper">Copper</string>
    <string name="zinc">Zinc</string>
    <string name="gallium">Gallium</string>
    <string name="germanium">Germanium</string>
    <string name="arsenic">Arsenic</string>
    <string name="selenium">Selenium</string>
    <string name="bromine">Bromine</string>
    <string name="krypton">Krypton</string>
    <string name="rubidium">Rubidium</string>
    <string name="strontium">Strontium</string>
    <string name="yttrium">Yttrium</string>
    <string name="zirconium">Zirconium</string>
    <string name="niobium">Niobium</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="technetium">Technetium</string>
    <string name="ruthenium">Ruthenium</string>
    <string name="rhodium">Rhodium</string>
    <string name="palladium">Palladium</string>
    <string name="silver">Silver</string>
    <string name="cadmium">Cadmium</string>
    <string name="indium">Indium</string>
    <string name="tin">Tin</string>
    <string name="antimony">Antimony</string>
    <string name="tellurium">Tellurium</string>
    <string name="iodine">Iodine</string>
    <string name="xenon">Xenon</string>
    <string name="cesium">Cesium</string>
    <string name="barium">Barium</string>
    <string name="lanthanum">Lanthanum</string>
    <string name="cerium">Cerium</string>
    <string name="praseodymium">Praseodymium</string>
    <string name="neodymium">Neodymium</string>
    <string name="promethium">Promethium</string>
    <string name="samarium">Samarium</string>
    <string name="europium">Europium</string>
    <string name="gadolinium">Gadolinium</string>
    <string name="terbium">Terbium</string>
    <string name="dysprosium">Dysprosium</string>
    <string name="holmium">Holmium</string>
    <string name="erbium">Erbium</string>
    <string name="thulium">Thulium</string>
    <string name="ytterbium">Ytterbium</string>
    <string name="lutetium">Lutetium</string>
    <string name="hafnium">Hafnium</string>
    <string name="tantalum">Tantalum</string>
    <string name="tungsten">Tungsten</string>
    <string name="rhenium">Rhenium</string>
    <string name="osmium">Osmium</string>
    <string name="iridium">Iridium</string>
    <string name="platinum">Platinum</string>
    <string name="gold">Gold</string>
    <string name="mercury">Mercury</string>
    <string name="thallium">Thallium</string>
    <string name="lead">Lead</string>
    <string name="bismuth">Bismuth</string>
    <string name="polonium">Polonium</string>
    <string name="astatine">Astatine</string>
    <string name="radon">Radon</string>
    <string name="francium">Francium</string>
    <string name="radium">Radium</string>
    <string name="actinium">Actinium</string>
    <string name="thorium">Thorium</string>
    <string name="protactinium">Protactinium</string>
    <string name="uranium">Uranium</string>
    <string name="neptunium">Neptunium</string>
    <string name="plutonium">Plutonium</string>
    <string name="americium">Americium</string>
    <string name="curium">Curium</string>
    <string name="berkelium">Berkelium</string>
    <string name="californium">Californium</string>
    <string name="einsteinium">Einsteinium</string>
    <string name="fermium">Fermium</string>
    <string name="mendelevium">Mendelevium</string>
    <string name="nobelium">Nobelium</string>
    <string name="lawrencium">Lawrencium</string>
    <string name="rutherfordium">Rutherfordium</string>
    <string name="dubnium">Dubnium</string>
    <string name="seaborgium">Seaborgium</string>
    <string name="bohrium">Bohrium</string>
    <string name="hassium">Hassium</string>
    <string name="meitnerium">Meitnerium</string>
    <string name="darmstadtium">Darmstadtium</string>
    <string name="roentgenium">Roentgenium</string>
    <string name="copernicium">Copernicium</string>
    <string name="nihonium">Nihonium</string>
    <string name="flerovium">Flerovium</string>
    <string name="moscovium">Moscovium</string>
    <string name="livermorium">Livermorium</string>
    <string name="tennessine">Tennessine</string>
    <string name="oganesson">Oganesson</string>




</resources>
